Updating breakpoint checks in js, adding grid item modal functionality to board members, fixing the way the modal works on small-screen

--- a/web/app/themes/girlsgarage/assets/styles/components/_item-grid.scss
+++ b/web/app/themes/girlsgarage/assets/styles/components/_item-grid.scss
@@ -22,6 +22,7 @@
   }
 
   @include media-md {
+    top: 0!important;
     position: fixed;
     padding: $global-padding 0;
   }
